--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.3.1
+autopep8==1.5.6
 bleach==3.3.0
+certifi==2020.12.5
+chardet==4.0.0
 Django==3.1.7
+idna==2.10
 markdown2==2.4.0
 packaging==20.9
+pycodestyle==2.7.0
 pyparsing==2.4.7
 python-dotenv==0.15.0
 pytz==2021.1
+requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.4
 webencodings==0.5.1
